updated height of the arrows on flex-direction-nav a to correct height, so they weren't cut off

--- a/css/luggage_announcements.slider.css
+++ b/css/luggage_announcements.slider.css
@@ -23,3 +23,7 @@
 .view-luggage-announcements .flexslider .flex-control-nav {
 	z-index:100;
 }
+
+.view-luggage-announcements .flexslider .flex-direction-nav a {
+	height: 45px;
+}
